fix alignement icon

--- a/Html/style.css
+++ b/Html/style.css
@@ -148,12 +148,22 @@ img {
     left: -2px;
     top: 20px;
 }
-.description-filters-icon {
+.description-filters-ctn {
+    position: relative;
     color: #0065FC;
     margin: 10px;
     border: 2px solid #ccc;
     border-radius: 50%;
     padding: 4px;
+    width: 1rem;
+    height: 1rem;
+    display: inline-block;
+}
+.description-filters-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 
 
@@ -589,7 +599,9 @@ footer a {
         padding: 15px;
         text-decoration: none;
     } 
-
+    .searchbar > .custon-icon {
+        display: none;
+    }
     .fa-search {
         display: none;
     }
